--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <div class="secondary-content t-border"> 
     <div class="res">
-      <img src="img/resort.jpg" alt="Resort">
+      <img src="imgs/resort.jpg" alt="Resort">
       <h3>From Tents to Resorts</h3>
       <p>
         Lake Tahoe is full of wonderful places to stay. You have the ability to sleep in the outdoors in a tent, or relax like a king at a five star resort. Here are our top three resorts:
@@ -45,7 +45,7 @@
     </div>
     
     <div class="tips">
-      <img src="img/mtn-landscape.jpg" alt="Mountain Landscape">
+      <img src="imgs/mtn-landscape.jpg" alt="Mountain Landscape">
       <h3>Pack Accordingly</h3>
       <p>
         One of most important things when it comes to traveling through the great outdoors is packing accordingly. Here are a few tips:
