--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <a class="callout" href="#wildlife">See the Wildlife</a>
 </div>
 
-<div class="secondary-content t-border"> 
+<div class="secondary-content t-border  group"> 
     <div class="res">
       <img src="imgs/resort.jpg" alt="Resort">
       <h3>From Tents to Resorts</h3>
