--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     some text gose here some text gose here some text gose here some text gose here
     some text gose here some text gose here some text gose here</p>
     <a class="callout" href="#more">findd out moooor </a>
-<div class="wildlif">
+<div class="Wildlife">
 <h2>this is an h2 too</h2>
 <p>
     As spawning season approaches, the fish acquire a humpback and protuberant jaw. After spawning, they die and their carcasses provide a feast for gatherings of <a href="#mink">mink</a>, <a href="#bears">bears</a>, and <a href="#eagles">bald eagles</a>.
